# mcp-project

./: .env.example  .gitignore  CLAUDE.md  DRYRUN.md  NOTES.md  README.md  docker-compose.yml  pyproject.toml  test_agent.py
agent/: WALKTHROUGH.md  __init__.py  agent.py  api.py  app.py  config.py  core.py  llm.py  main.py  memory.py  observability.py  registry.py  tools.py  toolset.py
agent/lookout/: README.md
agent/lookout/middlewares/: llmtoolselector.py  middlewares_list.txt
agent/lookout/tools/: wiki_tool.py
agent/prompts/: WALKTHROUGH.md  __init__.py  system.md  system_notools.md
agent/prompts/archive/: system.md
agent/tools/: __init__.py  mcp.py  registry.py  toolset.py
daitics_documentation_mcp/core/: parser.py
daitics_documentation_mcp/documentation/: getting-started.md  glossary.md  index.md  troubleshooting.md
daitics_documentation_mcp/documentation/features/: access-management.md  cache.md  kafka.md  observability.md  pipelines.md  schema-registry.md  synthetic-data.md
daitics_documentation_mcp/documentation/how-to/: add-a-user-to-a-role.md  archive-a-schema.md  assign-a-role-to-a-group.md  browse-kafka-messages.md  check-system-health.md  compile-and-deploy-a-pipeline.md  create-a-cache-key.md  create-a-custom-role.md  create-a-data-generator.md  create-a-kafka-topic.md  create-a-pipeline.md  create-a-schema.md  create-a-universe.md  delete-or-truncate-a-kafka-topic.md  duplicate-or-delete-a-pipeline.md  pause-resume-or-cancel-a-pipeline.md  refresh-a-data-pool.md  reset-a-user-password.md  save-a-new-schema-version.md  terminate-a-user-session.md  upload-a-data-sample.md
mcp_server/: WALKTHROUGH.md  auth.py  server.py
mcp_server/core/: chunking.py  config.py  embeddings.py  state.py
notes_server/: WALKTHROUGH.md  server.py
other/: README.md
other/guides/: langchain_memory.md
other/plans/: documentation_mcp_server.md
other/prompts/: documentation_generation_prompt.md
ui/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/chat/: ChatInput.tsx  ChatView.tsx  MarkdownContent.tsx  MessageBubble.tsx  MessageList.tsx  ToolCallCard.tsx
ui/src/components/layout/: Layout.tsx  Sidebar.tsx
ui/src/components/settings/: SettingsView.tsx
ui/src/hooks/: useAgentStream.ts
ui/src/store/: index.ts
ui/src/types/: index.ts
