# Why pyproject.toml and not requirements.txt?
#   pyproject.toml is the modern, PEP 621 standard for declaring a Python project.
#   It lets us:
#     - name the project (so `pip install -e .` works and we can import locally)
#     - declare dependencies alongside metadata in one file
#     - group optional extras (dev, observability) without a second file
#   requirements.txt is for pinning an *installed* environment; pyproject.toml
#   is for declaring what the project *needs*. They are not the same thing.

[project]
name = "mcp-learning-agent"
version = "0.1.0"
description = "Hands-on learning project: a LangGraph agent that connects to MCP servers."
readme = "README.md"
# Matches CLAUDE.md's target. 3.11 gives us tomllib in stdlib, nicer error
# messages ("ExceptionGroup" etc.), and the `Self` type without import dance.
# We still prefer `from __future__ import annotations` everywhere for
# consistency and forward-compat with 3.12+ lazy-evaluation rules.
requires-python = ">=3.11"

dependencies = [
    # ── MCP server side ─────────────────────────────────────────────────────
    # FastAPI + FastMCP share one process:
    #   FastAPI serves REST (/api/*) for humans/curl.
    #   FastMCP (lives inside the `mcp` SDK) serves the MCP SSE transport at /mcp/sse.
    # Why one process? State (Qdrant client, embedding model) is shared directly;
    # the REST layer becomes a convenient debug window into what MCP sees.
    "fastapi>=0.136.0",
    "uvicorn>=0.45.0",
    "mcp>=1.27.0",              # includes mcp.server.fastmcp.FastMCP
    "sse-starlette>=3.3.0",     # required by FastMCP's SSE transport

    # ── Vector store + embeddings ───────────────────────────────────────────
    # qdrant-client talks to the Qdrant server over HTTP/gRPC.
    # Why Qdrant? Payload filters let us enforce per-org access control (CLAUDE.md C1)
    # without splitting into one-collection-per-tenant, which is the right call
    # until compliance or scale forces otherwise.
    "qdrant-client>=1.17.0",
    # all-MiniLM-L6-v2: 384-dim, ~22M params, no API key. Swappable later.
    "sentence-transformers>=5.0.0",

    # ── Agent side ──────────────────────────────────────────────────────────
    # langgraph: graph-based agent runtime. We use `create_react_agent` from
    # langgraph.prebuilt to start; CLAUDE.md calls out where we'd replace it
    # with a hand-built graph later.
    # langchain: LLM provider interfaces, tools interface, and (soon) MCP adapters.
    "langgraph>=1.1.0",
    "langgraph-prebuilt>=1.0.0",
    "langchain-core>=1.3.0",
    "langchain>=1.2.0",
    # langchain-mcp-adapters: converts MCP tools (JSON-RPC + JSON Schema) into
    # LangChain BaseTool objects. This is what lets `llm.bind_tools([...])`
    # accept tools coming from an MCP server without us writing glue code.
    "langchain-mcp-adapters>=0.2.0",

    # ── LLM providers (pluggable via LLM_PROVIDER env var) ──────────────────
    # All three are declared so switching providers requires no code change —
    # only an env var flip. The agent code never imports a specific provider.
    "langchain-groq>=1.1.0",        # default — fast inference, good tool calling
    "langchain-anthropic>=1.4.0",
    "langchain-ollama>=1.1.0",

    # ── Config / boundaries ─────────────────────────────────────────────────
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",    # env var validation at startup
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Why optional? Observability is nice-to-have — the agent runs fine without it.
# Keep it off the critical path so `pip install -e .` stays minimal.
observability = [
    "langsmith>=0.7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# We'll have three top-level packages once Stages 2–4 land:
#   mcp_server/, notes_server/, agent/
# This tells setuptools to discover them automatically.
where = ["."]
include = ["mcp_server*", "notes_server*", "agent*"]
exclude = ["_archive*", "venv*"]
